--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "cordova-plugin-network-information",
     "cordova-plugin-statusbar",
     "cordova-plugin-inappbrowser",
-    "com.synconset.imagepicker",
-    "cordova-plugin-file-transfer"
+    "cordova-plugin-file-transfer",
+    "phonegap-plugin-push",
+    "phonegap-plugin-push@^1.4.5",
+    "phonegap-plugin-push@1.4.5"
   ],
   "cordovaPlatforms": [
     "ios",
