--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "phonegap-plugin-push",
     "cordova-plugin-file-transfer",
     "phonegap-plugin-push@~1.4.5",
-    "cordova-plugin-file-transfer@~1.4.0"
+    "cordova-plugin-file-transfer@~1.4.0",
+    "cordova-plugin-crosswalk-webview"
   ],
   "cordovaPlatforms": [
     "android",
