--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "node-sass": "^2.1.1"
+    "node-sass": "^2.1.1",
+    "gulp-cordova-build-android": "^1.3.0",
+    "gulp-cordova-create": "^1.2.0",
+    "gulp-cordova-plugin": "^1.3.2"
   },
   "devDependencies": {
     "bower": "^1.3.3",
