--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "osb",
+  "name": "Swaap",
   "version": "1.1.1",
-  "description": "osb",
+  "description": "Swaap",
   "dependencies": {
-    "end-of-stream": "^1.1.0",
     "gulp": "^3.5.6",
+    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "node-sass": "^2.1.1",
     "gulp-cordova-build-android": "^1.3.0",
     "gulp-cordova-create": "^1.2.0",
     "gulp-cordova-plugin": "^1.3.2"
@@ -24,7 +22,9 @@
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
+    "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
+    "pushwoosh-cordova-plugin",
     "cordova-plugin-x-socialsharing",
     "cordova-plugin-network-information",
     "cordova-plugin-statusbar",
@@ -36,10 +36,11 @@
       },
       "locator": "phonegap-plugin-push"
     },
-    "phonegap-plugin-push"
+    "phonegap-plugin-push",
+    "cordova-plugin-image-picker"
   ],
   "cordovaPlatforms": [
-    "ios",
-    "android"
+    "android",
+    "ios"
   ]
 }
