--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,8 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.1",
     "platform.js": "platform#~1.3.0"
+  },
+  "dependencies": {
+    "moment": "^2.14.1"
   }
 }
