--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "cordova-plugin-inappbrowser",
     "cordova-plugin-image-picker",
     "cordova-plugin-crosswalk-webview",
-    "cordova-plugin-file-transfer",
-    "pushwoosh-cordova-plugin", {
+    "cordova-plugin-file-transfer" {
       "variables": {
         "SENDER_ID": "694450719069"
       },
